@@ -44,6 +44,7 @@ suite = unittest.TestLoader().loadTestsFromNames(
      'tests.test_rfc5915.suite',
      'tests.test_rfc5940.suite',
      'tests.test_rfc5958.suite',
+     'tests.test_rfc5990.suite',
      'tests.test_rfc6010.suite',
      'tests.test_rfc6019.suite',
      'tests.test_rfc6031.suite',
