@@ -26,6 +26,7 @@ Revision 0.2.7, released XX-08-2019
   an import of the modules is enough in most situations; updates to
   RFC 2634, RFC 3274, RFC 3779, RFC 4073, RFC 4108, RFC 5035, RFC 5083,
   RFC 5084, RFC 5480, RFC 5940, RFC 5958, RFC 6019, and RFC 8520
+- Added RFC5990 providing RSA-KEM Key Transport Algorithm in the CMS
 
 Revision 0.2.6, released 31-07-2019
 -----------------------------------
